--- a/airflow-core/src/airflow/ui/public/i18n/locales/zh-CN/assets.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/zh-CN/assets.json
@@ -1,5 +1,5 @@
 {
-  "consumingDags": "消费者 DAGs",
+  "consumingDags": "消费者 Dags",
   "createEvent": {
     "button": "创建事件",
     "manual": {
@@ -9,14 +9,14 @@
     },
     "materialize": {
       "description": "触发此资源上游的 Dag",
-      "descriptionWithDag": "触发此资源上游的 DAG: {{dagName}}",
+      "descriptionWithDag": "触发此资源上游的 Dag: {{dagName}}",
       "label": "物化",
       "unpauseDag": "触发时取消暂停 {{dagName}}"
     },
     "success": {
       "manualDescription": "已成功手动创建资源事件。",
       "manualTitle": "已创建资源事件",
-      "materializeDescription": "已成功触发上游 DAG {{dagId}}。",
+      "materializeDescription": "已成功触发上游 Dag {{dagId}}。",
       "materializeTitle": "正在物化资源"
     },
     "title": "为 {{name}} 创建资源事件"
@@ -25,6 +25,6 @@
   "lastAssetEvent": "最后资源事件",
   "name": "名称",
   "producingTasks": "生产任务",
-  "scheduledDags": "已调度的 DAGs",
+  "scheduledDags": "已调度的 Dags",
   "searchPlaceholder": "搜索资源"
 }
