--- a/airflow-core/src/airflow/ui/public/i18n/locales/zh-CN/common.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/zh-CN/common.json
@@ -22,33 +22,33 @@
   "collapseDetailsPanel": "收起详细信息",
   "createdAssetEvent_one": "已创建资源事件",
   "createdAssetEvent_other": "已创建资源事件",
-  "dag_one": "DAG",
-  "dag_other": "DAGs",
+  "dag_one": "Dag",
+  "dag_other": "Dags",
   "dagDetails": {
     "catchup": "自动回填",
-    "dagRunTimeout": "DAG 执行超时",
+    "dagRunTimeout": "Dag 执行超时",
     "defaultArgs": "默认参数",
     "description": "描述",
-    "documentation": "DAG 文档",
+    "documentation": "Dag 文档",
     "fileLocation": "文件位置",
     "hasTaskConcurrencyLimits": "有任务并发数限制",
     "lastExpired": "最后过期时间",
     "lastParsed": "最后解析时间",
-    "latestDagVersion": "最新 DAG 版本",
-    "latestRun": "上次 DAG 执行",
+    "latestDagVersion": "最新 Dag 版本",
+    "latestRun": "上次 Dag 执行",
     "maxActiveRuns": "活跃执行数上限",
     "maxActiveTasks": "活跃任务数上限",
     "maxConsecutiveFailedDagRuns": "连续失败执行数上限",
-    "nextRun": "下次 DAG 执行",
+    "nextRun": "下次 Dag 执行",
     "owner": "拥有者",
     "params": "参数",
     "schedule": "调度",
     "tags": "标签"
   },
-  "dagId": "DAG ID",
+  "dagId": "Dag ID",
   "dagRun": {
     "conf": "配置",
-    "dagVersions": "DAG 版本",
+    "dagVersions": "Dag 版本",
     "dataIntervalEnd": "数据区间结束",
     "dataIntervalStart": "数据区间起始",
     "lastSchedulingDecision": "最后调度决策",
@@ -59,10 +59,10 @@
     "triggeredBy": "触发者",
     "triggeringUser": "触发用户名称"
   },
-  "dagRun_one": "DAG 执行",
-  "dagRun_other": "DAG 执行",
-  "dagRunId": "DAG 执行 ID",
-  "dagWarnings": "DAG 警告 / 错误",
+  "dagRun_one": "Dag 执行",
+  "dagRun_other": "Dag 执行",
+  "dagRunId": "Dag 执行 ID",
+  "dagWarnings": "Dag 警告 / 错误",
   "defaultToGraphView": "默认使用图形视图",
   "defaultToGridView": "默认使用网格视图",
   "direction": "书写方向",
@@ -93,7 +93,7 @@
     "or": "或"
   },
   "filters": {
-    "dagDisplayNamePlaceholder": "按 DAG 名称筛选",
+    "dagDisplayNamePlaceholder": "按 Dag 名称筛选",
     "keyPlaceholder": "按 XCom 键筛选",
     "logicalDateFromPlaceholder": "逻辑日期起始",
     "logicalDateToPlaceholder": "逻辑日期结束",
@@ -119,7 +119,7 @@
     "admin": "管理",
     "assets": "资源",
     "browse": "浏览",
-    "dags": "DAGs",
+    "dags": "Dags",
     "docs": "文档",
     "home": "首页",
     "legacyFabViews": "旧版视图",
@@ -129,7 +129,7 @@
   "noItemsFound": "找不到 {{modelName}}",
   "note": {
     "add": "添加笔记",
-    "dagRun": "DAG 执行笔记",
+    "dagRun": "Dag 执行笔记",
     "label": "笔记",
     "placeholder": "添加笔记...",
     "taskInstance": "任务实例笔记"
@@ -198,7 +198,7 @@
   "table": {
     "completedAt": "完成时间",
     "createdAt": "创建时间",
-    "filterByTag": "按标签筛选 DAGs",
+    "filterByTag": "按标签筛选 Dags",
     "filterColumns": "筛选表格列",
     "filterReset_one": "重置筛选",
     "filterReset_other": "重置筛选",
@@ -223,7 +223,7 @@
   "taskGroup": "任务分组",
   "taskId": "任务 ID",
   "taskInstance": {
-    "dagVersion": "DAG 版本",
+    "dagVersion": "Dag 版本",
     "executor": "执行器",
     "executorConfig": "执行器配置",
     "hostname": "主机名称",
