--- a/airflow-core/src/airflow/ui/public/i18n/locales/zh-CN/dashboard.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/zh-CN/dashboard.json
@@ -1,26 +1,26 @@
 {
   "favorite": {
-    "favoriteDags_one": "第 {{ count }} 个收藏的 DAG",
-    "favoriteDags_other": "前 {{ count }} 个收藏的 DAG",
-    "noDagRuns": "此 DAG 尚未被触发过。",
-    "noFavoriteDags": "尚无收藏的 DAG。请点击 DAG 列表旁的星号图示，将 DAG 加入收藏。"
+    "favoriteDags_one": "第 {{ count }} 个收藏的 Dag",
+    "favoriteDags_other": "前 {{ count }} 个收藏的 Dag",
+    "noDagRuns": "此 Dag 尚未被触发过。",
+    "noFavoriteDags": "尚无收藏的 Dag。请点击 Dag 列表旁的星号图示，将 Dag 加入收藏。"
   },
   "group": "分组",
   "health": {
-    "dagProcessor": "DAG 处理器",
+    "dagProcessor": "Dag 处理器",
     "health": "健康状态",
     "healthy": "健康",
     "lastHeartbeat": "最后心跳",
     "metaDatabase": "系统数据库",
     "scheduler": "调度器",
-    "status": "状态",   
+    "status": "状态",
     "triggerer": "触发器",
     "unhealthy": "健康状态异常"
   },
   "history": "历史记录",
   "importErrors": {
-    "dagImportError_one": "DAG 导入错误",
-    "dagImportError_other": "DAG 导入错误",
+    "dagImportError_one": "Dag 导入错误",
+    "dagImportError_other": "Dag 导入错误",
     "searchByFile": "依文件搜索",
     "timestamp": "时间戳"
   },
@@ -33,11 +33,11 @@
   },
   "source": "来源",
   "stats": {
-    "activeDags": "启用中的 DAGs",
-    "failedDags": "失败的 DAGs",
-    "queuedDags": "排队的 DAGs",
+    "activeDags": "启用中的 Dags",
+    "failedDags": "失败的 Dags",
+    "queuedDags": "排队的 Dags",
     "requiredActions": "待响应的任务实例",
-    "runningDags": "执行中的 DAGs",
+    "runningDags": "执行中的 Dags",
     "stats": "统计"
   },
   "uri": "Uri",
