remove _many and close gap

--- a/airflow-core/src/airflow/ui/public/i18n/locales/ca/common.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/ca/common.json
@@ -14,13 +14,10 @@
     "lightMode": "Mode clar",
     "systemMode": "Seguir la configuració del sistema"
   },
-  "asset_many": "Assets",
   "asset_one": "Asset",
   "asset_other": "Assets",
-  "assetEvent_many": "Esdeveniments d'Asset",
   "assetEvent_one": "Esdeveniment d'Asset",
   "assetEvent_other": "Esdeveniments d'Asset",
-  "backfill_many": "Reompliments",
   "backfill_one": "Reompliment",
   "backfill_other": "Reompliments",
   "browse": {
@@ -29,10 +26,8 @@
     "xcoms": "XComs"
   },
   "collapseDetailsPanel": "Col·lapsar el panell de detalls",
-  "createdAssetEvent_many": "Esdeveniments d'Asset creats",
   "createdAssetEvent_one": "Esdeveniment d'Asset creat",
   "createdAssetEvent_other": "Esdeveniments d'Asset creats",
-  "dag_many": "Dags",
   "dag_one": "Dag",
   "dag_other": "Dags",
   "dagDetails": {
@@ -44,6 +39,7 @@
     "fileLocation": "Ubicació del fitxer",
     "hasTaskConcurrencyLimits": "Té límits de concurrència de tasques",
     "lastExpired": "Últim caducat",
+    "lastParseDuration": "Duració de l'últim anàlisi",
     "lastParsed": "Últim anàlitzat",
     "latestDagVersion": "Última versió del Dag",
     "latestRun": "Última execució",
@@ -70,7 +66,6 @@
     "triggeredBy": "Executat per",
     "triggeringUser": "Nom de l'usuari que executa"
   },
-  "dagRun_many": "Execucions de Dag",
   "dagRun_one": "Execució de Dag",
   "dagRun_other": "Execucions de Dag",
   "dagRunId": "ID d'Execució del Dag",
@@ -149,7 +144,6 @@
   "pools": {
     "deferred": "Diferit",
     "open": "Obert",
-    "pools_many": "pools",
     "pools_one": "pool",
     "pools_other": "pools",
     "queued": "En cua",
@@ -185,7 +179,6 @@
     "hotkey": "s",
     "show": "Mostrar origen"
   },
-  "sourceAssetEvent_many": "Esdeveniments d'Asset d'origen",
   "sourceAssetEvent_one": "Esdeveniment d'Asset d'origen",
   "sourceAssetEvent_other": "Esdeveniments d'Asset d'origen",
   "startDate": "Data d'inici",
@@ -212,7 +205,6 @@
     "createdAt": "Creat a",
     "filterByTag": "Filtrar Dags per etiqueta",
     "filterColumns": "Filtrar columnes de la taula",
-    "filterReset_many": "Restablir filtres",
     "filterReset_one": "Restablir filtre",
     "filterReset_other": "Restablir filtres",
     "from": "De",
@@ -231,7 +223,6 @@
     "operator": "Operador",
     "triggerRule": "Regla d'execució"
   },
-  "task_many": "Tasques",
   "task_one": "Tasca",
   "task_other": "Tasques",
   "taskGroup": "Grup de tasques",
@@ -259,7 +250,6 @@
     },
     "unixname": "Nom Unix"
   },
-  "taskInstance_many": "Instàncies de tasca",
   "taskInstance_one": "Instància de tasca",
   "taskInstance_other": "Instàncies de tasca",
   "timeRange": {
