--- a/airflow-core/src/airflow/ui/public/i18n/locales/pt/browse.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/pt/browse.json
@@ -10,6 +10,9 @@
       "user": "Usuário",
       "when": "Quando"
     },
+    "filters": {
+      "eventType": "Tipo de Evento"
+    },
     "title": "Log de Auditoria"
   },
   "xcom": {
