--- a/airflow-core/src/airflow/ui/public/i18n/locales/pt/admin.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/pt/admin.json
@@ -36,6 +36,7 @@
       "extraFields": "Campos Extra",
       "extraFieldsJson": "Campos Extra JSON",
       "helperText": "Tipo de conexão faltando? Certifique-se de ter instalado o pacote do provider correspondente ao Airflow.",
+      "helperTextForRedactedFields": "Os campos redigidos ('***') permanecerão inalterados se não forem modificados.",
       "selectConnectionType": "Selecionar Tipo de Conexão",
       "standardFields": "Campos Padrão"
     },
