--- a/airflow-core/src/airflow/ui/public/i18n/locales/pt/assets.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/pt/assets.json
@@ -25,5 +25,6 @@
   "lastAssetEvent": "Último Evento de Asset",
   "name": "Nome",
   "producingTasks": "Produzindo Tarefas",
+  "scheduledDags": "DAGs Programados",
   "searchPlaceholder": "Pesquisar Assets"
 }
