static checks and one wording update better with duration

--- a/airflow-core/src/airflow/ui/public/i18n/locales/tr/dag.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/tr/dag.json
@@ -35,8 +35,8 @@
   "code": {
     "bundleUrl": "Paket URL'i",
     "noCode": "Kod Bulunamadı",
-    "parsedAt": "Ayrıştırıldı:",
-    "parseDuration": "Ayrıştırılma zamanı:"
+    "parseDuration": "Ayrıştırılma süresi:",
+    "parsedAt": "Ayrıştırıldı:"
   },
   "extraLinks": "Ek Bağlantılar",
   "grid": {
